[project]
name = "comp8230-assignment2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flow-matching==1.0.10",
    "monai-generative==0.2.3",
    "numpy==1.26.4",
    "pytorch-lightning==2.5.6",
    "torch==2.5.1",
]
